@@ -48,4 +48,5 @@ Version 1.1
  - Fix up AssumeAwake Option for the Wakeup Class (Justin)
  - Update BeNext Tag Reader Config File (Alex)
  - Fixed Issue 335 - Update zwave.me KeyFob Config File (Alex)
- - Fixed Issue 336 - Update Aeon Labs Multi Sensor Config File (Alex)
+ - Fixed Issue 336 - Update Aeon Labs DoorSensor Config File (Alex)
+ - Fixed Issue 337 - Update Aeon Labs Multi Sensor Config File (Alex)
